--- a/autos.html
+++ b/autos.html
@@ -669,36 +669,36 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalMustangGTlabel">Mas detalles del Mustang GT</h5>
+                <h5 style="font-family: 'Jomolhari', serif;" class="modal-title" id="modalMustangGTlabel">Mas detalles del Mustang GT</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <div class="card">
                     <div class="card-header">
-                        <h3>Mustang GT 2025</h3>
+                        <h3 style="font-family: 'Jomolhari', serif;">Mustang GT 2025</h3>
                     </div>
                     <div class="card-body">
-                        <h4><strong>Mas fotos</strong></h4>
+                        <h4 style="font-family: 'Jomolhari', serif;"><strong>Mas fotos</strong></h4>
                         <img class="img-fluid pb-3" style="border-radius: 15px;" src="imagenes/24.jpg" alt="foto1">
                         <img class="img-fluid pb-3" style="border-radius: 15px;" src="imagenes/17.jpg" alt="foto2">
                         <img class="img-fluid pb-3" style="border-radius: 15px;" src="imagenes/23.jpg" alt="foto3">
 
-                        <h4><strong>Modelo y tecnologia</strong></h4>
+                        <h4 style="font-family: 'Jomolhari', serif;"><strong>Modelo y tecnologia</strong></h4>
                         <p>El Mustang GT 2025 cuenta con sensores, pantallas y hasta botones digitales
                             para mejoramiento de fallas mecanicas y facilidad de uso, pantalla digital amoled,
                             velocimetro digital XTEM, sonido estereo X4W. 
                         </p>
 
-                        <h4><strong>Capacidad</strong></h4>
+                        <h4 style="font-family: 'Jomolhari', serif;"><strong>Capacidad</strong></h4>
                         <p>Este grandioso auto tiene una economia de 200km por tanqueada full de 20litros de gasolina</p>
 
-                        <h4><strong>Velocidad</strong></h4>
+                        <h4 style="font-family: 'Jomolhari', serif;"><strong>Velocidad</strong></h4>
                         <p>Tiene la capacidad de superar facilmente los 250km/h en 10s pero se recomiendo no 
                             sobrepasar 250km/h ya que el auto apesar de ser potente no esta diseñado para velocidades
                             mas extremas a 250km/h. tiene un torque de 80N/M
                         </p>
 
-                        <h4><strong>Precio</strong></h4>
+                        <h4 style="font-family: 'Jomolhari', serif;"><strong>Precio</strong></h4>
                         <p>El Mustang GT con sus nuevas tecnologias digitales en todos los sensores y botones
                             con su capacidad de torque sorprendente y su economia muy beneficiosa para el tipo 
                             de auto que es tiene un Precio de <strong>  130'000,000 COP </strong>completo con todos los papeles y todo listo
